--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -31,7 +31,7 @@ on:
     branches: [ "main" ]
 
 env:
-  AWS_REGION: ap-southeast-2                  # set this to your preferred AWS region, e.g. us-west-1
+  AWS_REGION: ap-northeast-2                  # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: group-17553933/project-01         # set this to your Amazon ECR repository name
   ECS_SERVICE: project-01-service                  # set this to your Amazon ECS service name
   ECS_CLUSTER: project-cluster-1623                # set this to your Amazon ECS cluster name
